--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ anyhow = "1.0.26"
 bumpalo = { version = "3.1.2", features = ["collections"] }
 twoway = "0.2.1"
 memchr = "2.3.0"
+
+[dev-dependencies]
+pretty_assertions = "0.6.1"
