--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
-name = "kes-rs"
+name = "kes"
 version = "0.1.0"
 authors = ["Riey <creeper844@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bench]]
+name = "parse"
+harness = false
 
 [dependencies]
 memchr = "2.3.0"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
+criterion = "0.3.1"
