--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ harness = false
 
 [dependencies]
 memchr = "2.3.0"
+bumpalo = { version = "3.2.0", features = ["collections"] }
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
