--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ readme = "README.md"
 name = "parse"
 harness = false
 
+[profile.release]
+debug = true
+
 [dependencies]
 memchr = "2.3.0"
 bumpalo = { version = "3.2.0", features = ["collections"] }
