--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Riey <creeper844@gmail.com>"]
 edition = "2018"
 description = "Korean Era Script"
 license = "MIT"
+documentation = "https://docs.rs/kes"
+homepage = "https://github.com/Riey/kes-rs"
 repository = "https://github.com/Riey/kes-rs"
 readme = "README.md"
 
