--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,9 @@ memchr = "2.3.2"
 bumpalo = { version = "3.2.0", features = ["collections"] }
 ahash = "0.3.2"
 thiserror = "1.0.11"
+async-trait = "0.1.24"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 criterion = "0.3.1"
+futures = "0.3.4"
