--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ ahash = "0.3.2"
 thiserror = "1.0.11"
 async-trait = "0.1.24"
 log = { version = "0.4.8", optional = true }
+arrayvec = "0.5.1"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
