--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,11 @@ thiserror = "1.0.22"
 async-trait = "0.1.42"
 arrayvec = "0.5.2"
 static_assertions = "1.1.0"
+lalrpop-util = "0.19.1"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 futures = "0.3.8"
+
+[build-dependencies]
+lalrpop = "0.19.1"
