--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ async-trait = "0.1.42"
 arrayvec = "0.5.2"
 static_assertions = "1.1.0"
 lalrpop-util = "0.19.1"
+string-interner = "0.12.1"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
