--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,12 @@ arrayvec = "0.5.2"
 static_assertions = "1.1.0"
 lalrpop-util = "0.19.1"
 string-interner = "0.12.1"
+serde = { version = "1.0.118", features = ["derive"] }
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 futures-executor = "0.3.8"
+serde_json = "1.0.60"
 
 [build-dependencies]
 lalrpop = "0.19.1"
