--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde = { version = "1.0.118", features = ["derive"] }
 pretty_assertions = "0.6.1"
 futures-executor = "0.3.8"
 serde_json = "1.0.60"
+bincode = "1.3.1"
 
 [build-dependencies]
 lalrpop = "0.19.1"
