--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 documentation = "https://docs.rs/kes"
 homepage = "https://github.com/Riey/kes-rs"
 repository = "https://github.com/Riey/kes-rs"
+keywords = ["script", "language"]
 readme = "README.md"
 
 [profile.release]
